--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
@@ -22,6 +23,7 @@
     "mongoose": "^8.15.2",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.3",
+    "qs": "^6.14.0",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
